@@ -1,4 +1,8 @@
 2017-10-11  Roland Winkler  <winkler@gnu.org>
+	* configure.ac: Use it.
+	* lisp/bbdb.el: Mention new mailing list bbdb-user@nongnu.org.
+
+2017-10-11  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb.el (bbdb-parse-records): Query before migrating BBDB
 	to new format.
 	(bbdb-delete-record-internal, bbdb-insert-record-internal)
